--- a/index.html
+++ b/index.html
@@ -77,6 +77,14 @@
 				<h2 class="layer-head">
 					My skills
 				</h2>
+				<div class="skills">
+					<div class="skill html" data-val="95%"><span class="title">HTML</span><span class="value">95%</span></div>
+					<div class="skill css" data-val="95%"><span class="title">CSS</span><span class="value">95%</span></div>
+					<div class="skill js" data-val="75%"><span class="title">JavaScript</span><span class="value">75%</span></div>
+					<div class="skill jquery" data-val="70%"><span class="title">JQuery</span><span class="value">70%</span></div>
+					<div class="skill php" data-val="65%"><span class="title">PHP</span><span class="value">65%</span></div>
+					<div class="skill symfony" data-val="60%"><span class="title">Symfony</span><span class="value">60%</span></div>
+				</div>
 			</div>
 		</div>
 	</div>
