--- a/index.html
+++ b/index.html
@@ -26,10 +26,8 @@
 				</li>
 			</ul>
 			<div class="center-block text-center home-block">
-				<span class="marks" style="left: 0.1em;">&lt;</span>
-				<h2 class="main-head center-block layer-head" style="margin-bottom: 0;">Dominik Grzędzielski</h2>
+				<h2 class="main-head center-block layer-head animate" style="margin-bottom: 0;">Dominik Grzędzielski</h2>
 				<h3 class="second-head center-block">Webdeveloper</h3>
-				<span class="marks" style="right: 0.1em;"> /&gt;</span>
 			</div>
 			<div class="center-block text-center" style="margin-top: 8em;">
 				<a href="#about" class="arrow scrollable"><span class="glyphicon glyphicon-arrow-down"></span></a>
@@ -40,7 +38,7 @@
 				<h2 class="layer-head">
 					About
 				</h2>
-				<div class="about-content">
+				<div class="about-content animate" data-anim="fadeInDown" style="animation-duration: 1s;">
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi perferendis, velit nisi officiis sit ratione dignissimos sint beatae debitis accusantium consectetur et distinctio iusto praesentium blanditiis odio tenetur illum tempora. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta ullam fuga ab adipisci quam ipsam eligendi accusamus voluptatibus, enim optio eos odio asperiores voluptatem velit reiciendis quis quisquam nulla ducimus!
 				</div>
 				<div class="bubbles">
@@ -78,12 +76,12 @@
 					My skills
 				</h2>
 				<div class="skills">
-					<div class="skill html" data-val="95%"><span class="title">HTML</span><span class="value">95%</span></div>
-					<div class="skill css" data-val="95%"><span class="title">CSS</span><span class="value">95%</span></div>
-					<div class="skill js" data-val="75%"><span class="title">JavaScript</span><span class="value">75%</span></div>
-					<div class="skill jquery" data-val="70%"><span class="title">JQuery</span><span class="value">70%</span></div>
-					<div class="skill php" data-val="65%"><span class="title">PHP</span><span class="value">65%</span></div>
-					<div class="skill symfony" data-val="60%"><span class="title">Symfony</span><span class="value">60%</span></div>
+					<div class="skill html animate" data-val="95%" data-anim="scaleInX"><span class="title">HTML</span><span class="value">95%</span></div>
+					<div class="skill css animate" data-val="95%" data-anim="scaleInX"><span class="title">CSS</span><span class="value">95%</span></div>
+					<div class="skill js animate" data-val="75%" data-anim="scaleInX"><span class="title">JavaScript</span><span class="value">75%</span></div>
+					<div class="skill jquery animate" data-val="70%" data-anim="scaleInX"><span class="title">JQuery</span><span class="value">70%</span></div>
+					<div class="skill php animate" data-val="65%" data-anim="scaleInX"><span class="title">PHP</span><span class="value">65%</span></div>
+					<div class="skill symfony animate" data-val="60%" data-anim="scaleInX"><span class="title">Symfony</span><span class="value">60%</span></div>
 				</div>
 			</div>
 		</div>
