--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</nav>
 		<div class="page-layer page-layer-1" id="home">
 			<ul class="scene">
-				<li class="layer" data-depth="0.2">
+				<li class="layer" data-depth="0.3">
 					<div class="bg"></div>
 				</li>
 			</ul>
@@ -41,7 +41,7 @@
 				<div class="about-content animate" data-anim="fadeInDown" style="animation-duration: 1s;">
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi perferendis, velit nisi officiis sit ratione dignissimos sint beatae debitis accusantium consectetur et distinctio iusto praesentium blanditiis odio tenetur illum tempora. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta ullam fuga ab adipisci quam ipsam eligendi accusamus voluptatibus, enim optio eos odio asperiores voluptatem velit reiciendis quis quisquam nulla ducimus!
 				</div>
-				<div class="bubbles">
+				<div class="bubbles animate" data-anim="scaleIn">
 					<h3>I LIKE</h3>
 					<span class="glyphicon glyphicon-arrow-left bubble-control left" style="font-size: 3em; display: inline-block;"></span>
 					<div class="bubble" style="display: inline-block;">
