--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="fluid-container">
-		<nav class="main-nav transition navbar navbar-default">
+		<nav class="main-nav transition">
 			<a href="#home" class="logo transition scrollable">&lt;<span>DG</span> /&gt;</a>
 			<ul class="nav navbar-nav">
 				<li><a href="#home">Homepage</a></li>
@@ -26,11 +26,11 @@
 				</li>
 			</ul>
 			<div class="center-block text-center home-block">
-				<h2 class="main-head center-block layer-head animate" style="margin-bottom: 0;">Dominik Grzędzielski</h2>
+				<h2 class="main-head center-block layer-head" style="margin-bottom: 0;">Dominik Grzędzielski</h2>
 				<h3 class="second-head center-block">Webdeveloper</h3>
 			</div>
 			<div class="center-block text-center" style="margin-top: 8em;">
-				<a href="#about" class="arrow scrollable"><span class="glyphicon glyphicon-arrow-down"></span></a>
+				<a href="#about" class="arrow scrollable animate" data-anim="bounceIn"><span class="glyphicon glyphicon-arrow-down"></span></a>
 			</div>
 		</div>
 		<div class="page-layer page-layer-2" id="about">
@@ -76,12 +76,12 @@
 					My skills
 				</h2>
 				<div class="skills">
-					<div class="skill html animate" data-val="95%" data-anim="scaleInX"><span class="title">HTML</span><span class="value">95%</span></div>
-					<div class="skill css animate" data-val="95%" data-anim="scaleInX"><span class="title">CSS</span><span class="value">95%</span></div>
-					<div class="skill js animate" data-val="75%" data-anim="scaleInX"><span class="title">JavaScript</span><span class="value">75%</span></div>
-					<div class="skill jquery animate" data-val="70%" data-anim="scaleInX"><span class="title">JQuery</span><span class="value">70%</span></div>
-					<div class="skill php animate" data-val="65%" data-anim="scaleInX"><span class="title">PHP</span><span class="value">65%</span></div>
-					<div class="skill symfony animate" data-val="60%" data-anim="scaleInX"><span class="title">Symfony</span><span class="value">60%</span></div>
+					<div class="skill html animate" style="width:95%;" data-anim="scaleInX"><span class="title">HTML</span><span class="value">95%</span></div>
+					<div class="skill css animate" style="width: 95%;" data-anim="scaleInX"><span class="title">CSS</span><span class="value">95%</span></div>
+					<div class="skill js animate" style="width: 75%;" data-anim="scaleInX"><span class="title">JavaScript</span><span class="value">75%</span></div>
+					<div class="skill jquery animate" style="width: 70%;" data-anim="scaleInX"><span class="title">JQuery</span><span class="value">70%</span></div>
+					<div class="skill php animate" style="width: 65%;" data-anim="scaleInX"><span class="title">PHP</span><span class="value">65%</span></div>
+					<div class="skill symfony animate" style="width: 60%;" data-anim="scaleInX"><span class="title">Symfony</span><span class="value">60%</span></div>
 				</div>
 			</div>
 		</div>
