--- a/index.html
+++ b/index.html
@@ -85,6 +85,21 @@
 				</div>
 			</div>
 		</div>
+		<div class="page-layer page-layer-4" id="works">
+			<div class="center-block text-center" style="display: flex; flex-flow: row wrap;">
+				<a href="https://github.com/vettev" class="work animate" data-anim="bounceIn">
+					<span>GitHub</span>
+					<div class="img"><img src="images/git-light.png" /></div>
+				</a>
+				<a href="http://codepen.io/Vette" class="work animate" data-anim="bounceIn">
+					<span>Codepen</span>
+					<div class="img"><img src="images/codepen.png" /></div>
+				</a>
+			</div>
+		</div>
+		<div class="page-layer page-layer-5" id="contact">
+			
+		</div>
 	</div>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/parallax.min.js"></script>
