--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
 		</div>
 		<div class="page-layer page-layer-4" id="works">
 			<div class="center-block text-center" style="display: flex; flex-flow: row wrap;">
-				<a href="https://github.com/vettev" class="work animate" data-anim="bounceIn">
+				<a href="https://github.com/vettev" target="_blank" class="work animate" data-anim="bounceIn">
 					<span>GitHub</span>
 					<div class="img"><img src="images/git-light.png" /></div>
 				</a>
-				<a href="http://codepen.io/Vette" class="work animate" data-anim="bounceIn">
+				<a href="http://codepen.io/Vette" target="_blank" class="work animate" data-anim="bounceIn">
 					<span>Codepen</span>
 					<div class="img"><img src="images/codepen.png" /></div>
 				</a>
